--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: #FDCBB8;
 }
+body{
+    background-color: #FDCBB8;
 
+}
 /* *:hover {
     font-weight: bold;
 } */
@@ -13,6 +15,47 @@
     --font-helvetica-neue: "Helvetica Neue";
     --font-kode-mono: "Kode Mono";
 }
+/* ---mouse---- */
+.custom-cursor {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+
+  }
+
+  .site-wide {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+   display:block;
+    /* Changed to make it always visible */
+
+  }
+
+  .site-wide .pointer {
+    background-image: url('pic/image 1.png');
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 720px;
+
+    translate: 5% 28%;
+    transition: width 0.1s ease-in-out, height 0.1s ease-in-out;
+    z-index: 120;
+    pointer-events: none;
+    /* 穿越过图层 */
+
+
+  }
+
+  .site-wide.active .pointer {
+    width: 20px;
+    height: 20px;
+
+  }
 /* ----head----- */
 .header{
     min-height: 100vh;
